# keihou-bot

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.gemini/commands/: plan.toml
.github/workflows/: gemini-scheduled-triage.yml
samples/: tokyo-cancellation-sample.xml  tokyo-warning-sample-2.xml  tokyo-warning-sample.xml
specs/001-23-discord-bot/: plan.md  spec.md  tasks.md
specs/002-embed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-embed/contracts/: discord_embed.md
specs/003-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-/contracts/: discord_cancellation_embed.md
specs/004-c-users-yuubi/: spec.md
specs/005-mention-role-when/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-mention-role-when/contracts/: discord_role_mention.md
src/: discord_client.py  filter.py  guidance_state.py  jma_client.py  jma_parser.py  main.py  models.py  school_policy.py  storage.py
tests/contract/: test_discord_role_mention.py
tests/integration/: test_cancellation.py  test_main.py  test_school_guidance.py
tests/unit/: test_discord_client.py  test_filter.py  test_guidance_state.py  test_jma_parser.py  test_jma_parser_cancellation.py  test_models.py  test_school_policy.py  test_storage.py  test_suppression.py
